<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            >

            <Button
                android:id="@+id/button_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/iniciar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_cine"
                android:layout_width="78dp"
                android:layout_height="40dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="332dp"
                android:text="@string/Cine"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spin_cine"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="120dp"
                android:background="@color/gris_claro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/spin_peli"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="232dp"
                android:background="@color/gris_claro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="107dp"
                android:layout_height="40dp"
                android:layout_marginTop="184dp"
                android:layout_marginEnd="304dp"
                android:text="@string/pelicula"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="98dp"
                android:layout_height="40dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="312dp"
                android:text="@string/hora"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spin_hora"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="340dp"
                android:background="@color/gris_claro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/asientos_img"
                android:layout_width="409dp"
                android:layout_height="349dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="19dp"
                android:contentDescription="@string/Asiento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spin_asiento"
                tools:src="@tools:sample/backgrounds/scenic" />

            <Spinner
                android:id="@+id/spin_asiento"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="464dp"
                android:background="@color/gris_claro"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="428dp"
                android:layout_marginEnd="312dp"
                android:text="@string/Asiento"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/reservar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/asientos_img" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>